# LLM_PvZ_Player

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  start_agent.bat  test_injector.py  test_pvz.py  test_trim.py
examples/: agent_demo.py  capture_demo.py  diag_select_card.py  diag_select_card_funcs.py  diag_tutorial.py  pause_demo.py  test_capture_focus.py  test_select_seeds.py  test_zombie_position.py  verify_grid_formula.py  webui_demo.py
src/vlm_game_agent/: __init__.py
src/vlm_game_agent/agent/: __init__.py  action_logger.py  compressor.py  core.py  executor.py  llm.py  memory.py  parser.py  prompt.py
src/vlm_game_agent/config/: __init__.py  settings.py
src/vlm_game_agent/pause/: __init__.py  base.py  controller.py  focus_pause.py  hard_pause.py  soft_pause.py
src/vlm_game_agent/pvz/: __init__.py  executor.py  injector.py  memory.py  offsets.py  reader.py
src/vlm_game_agent/vision/: __init__.py  capture.py
src/vlm_game_agent/webui/: __init__.py  manager.py  server.py
src/vlm_game_agent/webui/static/: index.html
