[project]
name = "vlm-game-agent"
version = "0.1.0"
description = "基于大视觉语言模型的 GUI 自动化 Agent"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "Pillow>=10.0.0",
    "pynput>=1.7.6",
    "pywin32>=306; sys_platform == 'win32'",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.110.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
